--- a/QRTracker/Views/Scan/Index.cshtml
+++ b/QRTracker/Views/Scan/Index.cshtml
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="span8 well ">
-                
+                <img id = "refresh" class="btn btn-warning" src="../../Content/glyphicons_081_refresh.png" />            
   
                 <table cellpadding="0" cellspacing="0" border="0" class="display" id="history">
                     <thead>
@@ -85,7 +85,8 @@
     $(document).ready(function () {
         webcam.set_hook('onComplete', 'my_completion_handler');
         initDataTables();
-        updateTimer = setInterval("UpdateTable()", "3000");
+        $("#refresh").click(function () { UpdateTable(); });
+        //        updateTimer = setInterval("UpdateTable()", "3000");
         ////        $('#example').dataTable({
         ////            bProcessing: true,
         ////            bRetrieve: false,
