--- a/QRTracker/Views/Shared/_Layout.cshtml
+++ b/QRTracker/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="index.htm"><img src="http://placehold.it/550x80" alt="your slogan here"></a>
+          <a class="brand" href="index.htm"><img src="http://missiongeek.com/storage/post-images/2011/06/Super%20Mario%20Bros.3%20Banner.png?__SQUARESPACE_CACHEVERSION=1309182264481" alt="your slogan here"></a>
           <div class="nav-collapse in" style="height:auto;">
             <ul class="nav">
               <li>@Html.ActionLink("Scan","Index","Home")</li>
