--- a/QRTracker/Content/jquery.dataTables.css
+++ b/QRTracker/Content/jquery.dataTables.css
@@ -24,6 +24,8 @@ table.dataTable tfoot th {
 
 table.dataTable td {
 	padding: 3px 10px;
+	/*text-align: center;*/
+    vertical-align: middle;
 }
 
 table.dataTable td.center,
@@ -31,11 +33,11 @@ table.dataTable td.dataTables_empty {
 	text-align: center;
 }
 
-table.dataTable tr.odd { background-color: #E2E4FF; }
+table.dataTable tr.odd { background-color: white; }
 table.dataTable tr.even { background-color: white; }
 
-table.dataTable tr.odd td.sorting_1 { background-color: #D3D6FF; }
-table.dataTable tr.odd td.sorting_2 { background-color: #DADCFF; }
+table.dataTable tr.odd td.sorting_1 { background-color: white; }
+table.dataTable tr.odd td.sorting_2 { background-color: white; }
 table.dataTable tr.odd td.sorting_3 { background-color: #E0E2FF; }
 table.dataTable tr.even td.sorting_1 { background-color: #EAEBFF; }
 table.dataTable tr.even td.sorting_2 { background-color: #F2F3FF; }
