--- a/QRTracker/Views/Scan/Index.cshtml
+++ b/QRTracker/Views/Scan/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<QRTracker.Models.RoleModel>
+﻿@model List<QRTracker.Models.RoleListModel>
 <script src="../../Scripts/jquery-1.7.2.js" type="text/javascript"></script>
 <script src="../../Scripts/jquery-ui-1.8.20.js" type="text/javascript"></script>
 <script src="../../Scripts/webcam.js" type="text/javascript"></script>
