--- a/QRTracker/Views/Users/Index.cshtml
+++ b/QRTracker/Views/Users/Index.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>АХАХАХХАХА</h2>
+<h2>User Roles</h2>
 <div class="row well">
     <div class="span4 well">
             <table id="users" class="table table-striped">
