--- a/QRTracker/Content/bootstrap.css
+++ b/QRTracker/Content/bootstrap.css
@@ -101,6 +101,9 @@ body {
   line-height: 18px;
   color: #000000;
   background: #fff;
+   height: 100%;
+   width: 100%;
+   position: absolute;
 }
 a {
   color: #0088cc;
@@ -298,6 +301,7 @@ h6 {
   font-weight: bold;
   color: #333333;
   text-rendering: optimizelegibility;
+    text-align: center;
 }
 h1 small,
 h2 small,
@@ -2637,7 +2641,7 @@ background: #fff;
 
 .alert {
   padding: 8px 35px 8px 14px;
-  margin-bottom: 18px;
+  /*margin-bottom: 18px;*/
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   background-color: #fcf8e3;
   border: 1px solid #fbeed5;
@@ -2664,6 +2668,7 @@ background: #fff;
 .alert-danger, .alert-error {
   background-color: #f2dede;
   border-color: #eed3d7;
+  padding: 10px;
 }
 .alert-danger,
 .alert-error,
@@ -3338,6 +3343,21 @@ background: #fff;
 .well {
   min-height: 20px;
   padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #eee;
+  border: 1px solid rgba(0, 0, 0, 0.05);
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+}
+
+.wellMarg {
+  min-height: 20px;
+  margin: 10px;
   margin-bottom: 20px;
   background-color: #f5f5f5;
   border: 1px solid #eee;
