--- a/QRTracker/Views/Details/Details.cshtml
+++ b/QRTracker/Views/Details/Details.cshtml
@@ -20,7 +20,8 @@
                     {
                       var parts = Model.qrDoc.qtText.Split(new string[] {";", "\r", "\n"}, StringSplitOptions.RemoveEmptyEntries);
                     <div class="alert alert-info">
-                    No:<strong><div id="docNo">@parts[0]</div></strong>; Type:<strong>@parts[1]</strong>
+                    <p>No: <strong>@parts[0]</strong><p>
+                    <p>Type:<strong>@parts[1]</strong></p>
                     </div>  
                     }
                     catch (Exception)
@@ -44,9 +45,9 @@
                             {
                    <tr class="deleted">
                     <td>@trackMod.Track.Status.name</td>
-                    <td>@trackMod.Track.statDate</td>
+                    <td>@trackMod.Track.statDate.ToString(QRTracker.Constants.DateFormat)</td>
                     <td>@trackMod.Track.User.name</td>
-                    <td>@trackMod.Track.deleted</td>
+                    <td>@(trackMod.Track.deleted.HasValue? trackMod.Track.deleted.Value.ToString(QRTracker.Constants.DateFormat):"")</td>
                   </tr>
                     
                     @*<p class="deleted">@trackMod.Track.Status.name __ @trackMod.Track.statDate __ @trackMod.Track.User.name __ @trackMod.Track.deleted __ );
