--- a/QRTracker/Views/Users/GetRoles.cshtml
+++ b/QRTracker/Views/Users/GetRoles.cshtml
@@ -1,17 +1,22 @@
-﻿@model QRTracker.Models.RoleModel
+﻿<link href="http://code.jquery.com/ui/1.8.21/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" />
+@model QRTracker.Models.RoleModel
 
-@{
-  
-}
 
-<h2>@Model.User.name</h2>
+<div class="ui-dialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix">
+<h3>@Model.User.name</h3></div>
+<div class="wellMarg">
 @using (Ajax.BeginForm("GetRoles", "Users", new AjaxOptions(){UpdateTargetId = "upload"}))
 {
    @Html.Hidden("userId",Model.User.id) 
     <table id="roles" class="table table-striped">
-        <tr><td>Manager: @Html.CheckBox("isManager", Model.User.isManager)</td> </tr>
-        <tr><td>Viewer: @Html.CheckBox("isViewer", Model.User.isViewer)</td> </tr>
+        <thead>
+            <tr><td></td><td></td></tr>
+            <tr><td>Manager: @Html.CheckBox("isManager", Model.User.isManager)</td> 
+                <td>Viewer: @Html.CheckBox("isViewer", Model.User.isViewer)</td> </tr>
+               <tr><td></td><td></td></tr>
+            </thead>
         <tbody>
+            
             @foreach (var roleModel in Model.roleListModel)
             {
 
@@ -22,7 +27,12 @@
             }
         </tbody>
     </table>
-     if (Model.ResultText != null)
+    
+    <button type="submit" class="btn btn-primary pull-right" style="margin: 45px">Save</button>
+   
+
+}
+ @if (Model.ResultText != null)
     {
         if (!string.IsNullOrEmpty(Model.ResultText.text))
         {
@@ -41,10 +51,7 @@
             }
         }
     }
-    <button type="submit">Save</button>
-   
-
-}
+</div>
 <script>
-    $("#result").delay(5000).fadeToggle();
+  $("#result").delay(5000).fadeToggle();
 </script>
